...
                .themedTextField()
            Spacer()
            NavigationLink(destination: ColorPreviewFolderView(model: model, dismissAction: dismissAction)) {
                Text(L10n.continue)
                    .textStyle(RoundedButton())
            }
            .accessibilityIdentifier("folderNameContinueButton")
        }
        .padding()
        .navigationTitle(L10n.folderNameTitle)
        .onAppear {
            // this appears to be a known issue with SwiftUI, in that it just passes this onto UIKit which can't set focus while a view is appearing, so here we artificially delay it
            DispatchQueue.main.asyncAfter(deadline: .now() + 0.6) {
...
