...
        scrollToAndTap(app.buttons[Config.step_03_podcastName])
        openEpisode(Config.step_03_episodeKey)

        hittablePlayButton.waitForThenTap()

        if !app.buttons["Close player"].exists {
            app.buttons["Player"].waitForThenTap()
        }

        snapshot("03_Player_With_Chapters")

        // 03 Teardown
        hittablePlayButton.waitForThenTap()
...
